css/styles.css
* {
    margin:0;
}
html {
    min-height: 100vh;
    position:relative;
}

body {
    min-height: 100vh;
}
ul li {
    display: inline-block;
}
li a {
    text-decoration: none;
    color:white;
}

main{
    padding:50px;
}
header, footer {
    text-align: center;
    background-color: black;
    color:white;
    padding:50px;
}
footer {
    width:100%;
    position:absolute;
    bottom: 0; 
}

